<resources>
    <string name="app_name">inmoprop</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Inmuebles</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_contrato">Contratos</string>
    <string name="menu_logout">LogOut</string>
    <string name="fab_descripcion">Enviar mensaje</string>
</resources>